[gd_scene load_steps=14 format=3 uid="uid://ddey3704kc14m"]

[ext_resource type="PackedScene" uid="uid://dxld663k1o06a" path="res://Scenes/Games/DodgeDeezNuts/player.tscn" id="1_irjol"]
[ext_resource type="Script" path="res://Scenes/Games/DodgeDeezNuts/main.gd" id="1_wk1ao"]
[ext_resource type="PackedScene" uid="uid://dklcjr7nkixuc" path="res://Scenes/Games/DodgeDeezNuts/acorn.tscn" id="2_6s3cp"]
[ext_resource type="PackedScene" uid="uid://b8vqtmcc0a77c" path="res://Scenes/Games/DodgeDeezNuts/cashew.tscn" id="2_id5ox"]
[ext_resource type="PackedScene" uid="uid://ce8tfwggnkvge" path="res://Scenes/Games/DodgeDeezNuts/peanut.tscn" id="3_d7a6s"]
[ext_resource type="PackedScene" uid="uid://b2qqsq44wflgp" path="res://Scenes/Games/DodgeDeezNuts/almond.tscn" id="3_lk41p"]
[ext_resource type="Texture2D" uid="uid://dln17wikwdjii" path="res://Art/DodgeDeezNuts/don't_touch my nuts.png" id="6_3g23e"]
[ext_resource type="PackedScene" uid="uid://dptst1ssu8rx6" path="res://Scenes/Games/DodgeDeezNuts/hud.tscn" id="7_kx0h7"]
[ext_resource type="AudioStream" uid="uid://mhm35huocghg" path="res://Audio/DodgeDeezNuts/DeezNuts.mp3" id="8_e4u3j"]
[ext_resource type="AudioStream" uid="uid://kk160uu3lsja" path="res://Audio/DodgeDeezNuts/GOTEEM.mp3" id="9_cjgrb"]
[ext_resource type="AudioStream" uid="uid://jj1t4re3tn50" path="res://Audio/DodgeDeezNuts/Don't Touch My Nuts/loop.mp3" id="11_g3qex"]
[ext_resource type="AudioStream" uid="uid://bhqvivj2854bx" path="res://Audio/DodgeDeezNuts/Don't Touch My Nuts/start.mp3" id="11_m48aq"]

[sub_resource type="Curve2D" id="Curve2D_pcp87"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1152, 0, 0, 0, 0, 0, 1152, 648, 0, 0, 0, 0, 8, 640, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_wk1ao")
acorn_scene = ExtResource("2_6s3cp")
almond_scene = ExtResource("3_lk41p")
cashew_scene = ExtResource("2_id5ox")
peanut_scene = ExtResource("3_d7a6s")

[node name="BackgroundImage" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.925, 0.925)
texture = ExtResource("6_3g23e")
expand_mode = 1

[node name="Player" parent="." instance=ExtResource("1_irjol")]

[node name="NutTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="NutPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_pcp87")

[node name="NutSpawnLocation" type="PathFollow2D" parent="NutPath"]

[node name="HUD" parent="." instance=ExtResource("7_kx0h7")]

[node name="DeezNuts" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_e4u3j")
volume_db = -10.0
max_polyphony = 99

[node name="GOTEEM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_cjgrb")

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_m48aq")
volume_db = -15.0

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_g3qex")
volume_db = -15.0

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="NutTimer" to="." method="_on_nut_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="finished" from="MenuMusic" to="." method="_menu_music_loop"]
[connection signal="finished" from="GameMusic" to="." method="_game_music_loop"]
